tests/typing/should_fail/overload_return_type.java
package tutu.titi.toto;

class A {
	public int method1(int i) {
		return 1;
	}

	public float method1(float j) {
		return 1.1;
	}
}
